# Octo

./: .env.example  .gitignore  .mcp.json.example  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/workflows/: publish.yml  test.yml
.octo/agents/topic-analyst/: AGENT.md
.octo/agents/trend-researcher/: AGENT.md
.octo/agents/verifier/: AGENT.md
.octo/skills/discuss/: SKILL.md
.octo/skills/map-codebase/: SKILL.md
.octo/skills/pause/: SKILL.md
.octo/skills/quick/: SKILL.md
.octo/skills/verify/: SKILL.md
.octo/workspace/2026-02-11/: skills_marketplace_implementation_plan.md
octo/: __init__.py  __main__.py  abort.py  agent_wizard.py  attachments.py  background.py  callbacks.py  cli.py  config.py  context.py  dependencies.py  graph.py  heartbeat.py  mcp_manager.py  middleware.py  models.py  retry.py  sessions.py  skill_wizard.py  skills_cli.py  state.py  teams_utils.py  telegram.py  ui.py  voice.py
octo/core/: __init__.py  _builder.py  config.py  constants.py  engine.py  graph.py  middleware.py
octo/core/checkpointing/: __init__.py
octo/core/loaders/: __init__.py  mcp_loader.py
octo/core/storage/: __init__.py  base.py  filesystem.py  s3.py
octo/core/tools/: __init__.py  claude_code.py  lifecycle.py  mcp_proxy.py  memory.py  planning.py  telegram_tools.py  voice_tools.py
octo/core/voice/: __init__.py  stt.py  tts.py
octo/loaders/: __init__.py  agent_loader.py  mcp_loader.py  skill_loader.py
octo/mcp_servers/: teams.py
octo/oauth/: __init__.py  browser.py  cli_commands.py  storage.py
octo/swarm/: __init__.py  registry.py  runner.py  server.py
octo/tools/: __init__.py  claude_code.py  filesystem.py  shell.py
octo/virtual_persona/: __init__.py  access_control.py  cache.py  commands.py  confidence.py  content_filter.py  graph.py  knowledge.py  persona.py  poller.py  profiles.py  state.py  stats.py
octo/wizard/: __init__.py  doctor.py  onboarding.py  templates.py  validators.py
tests/: test_content_filter.py  test_poller_attachments.py
