[project]
name = "octo-agent"
version = "0.1.0"
description = "Octo — LangGraph multi-agent CLI with Rich UI and Telegram transport"
readme = "README.md"
requires-python = ">=3.11"
license = {file = "LICENSE"}
authors = [{name = "OneTest AI"}]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
]
dependencies = [
    "langchain>=1.2.0",
    "langchain-anthropic",
    "langchain-aws",
    "langchain-openai",
    "langchain-mcp-adapters",
    "langgraph>=1.0.8",
    "langgraph-supervisor",
    "langgraph-swarm",
    "langgraph-checkpoint-sqlite",
    "mcp",
    "rich",
    "click",
    "python-dotenv",
    "python-telegram-bot>=21",
    "elevenlabs",
    "pyyaml",
    "prompt_toolkit>=3.0",
    "deepagents",
]

[project.scripts]
octo = "octo.cli:main"

[tool.setuptools.packages.find]
include = ["octo*"]

[project.urls]
Homepage = "https://github.com/onetest-ai/Octo"
Repository = "https://github.com/onetest-ai/Octo"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
