[project]
name = "octo-agent"
version = "0.6.1"
description = "AI agent engine — embeddable LangGraph supervisor with multi-agent orchestration"
readme = "README.md"
requires-python = ">=3.11"
license = {file = "LICENSE"}
authors = [{name = "OneTest AI"}]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
]

# Core engine dependencies — always installed
dependencies = [
    "langchain>=1.2.0",
    "langchain-anthropic",
    "langchain-aws",
    "langchain-openai",
    "langchain-google-genai>=4.0",
    "langchain-mcp-adapters",
    "langgraph>=1.0.8",
    "langgraph-supervisor",
    "langgraph-swarm",
    "langgraph-checkpoint-sqlite",
    "mcp",
    "pydantic>=2.0",
    "pyyaml",
    "langfuse>=2.0",
]

[project.optional-dependencies]
# CLI terminal UI
cli = [
    "rich>=13",
    "click",
    "python-dotenv>=1.0",
    "prompt_toolkit>=3.0",
    "elevenlabs",
    "deepagents",
    "msal",
]
# Telegram transport
telegram = [
    "python-telegram-bot>=21",
]
# S3-compatible storage backend
s3 = [
    "boto3>=1.34",
]
# PostgreSQL checkpoints
postgres = [
    "langgraph-checkpoint-postgres>=0.1",
    "asyncpg>=0.29",
]
# Everything (current full experience)
all = [
    "octo-agent[cli,telegram,s3,postgres]",
]

[project.scripts]
octo = "octo.cli:main"  # requires [cli] extra

[tool.setuptools.packages.find]
include = ["octo*"]

[project.urls]
Homepage = "https://github.com/onetest-ai/Octo"
Repository = "https://github.com/onetest-ai/Octo"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
